--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,34 +1,38 @@
-# Backend Dockerfile
-FROM node:20-alpine AS builder
+# ===============================
+# Backend Dockerfile - SalesGenius
+# ===============================
 
+FROM node:20-alpine AS builder
 WORKDIR /app
 
-# Install dependencies
+# 1️⃣ Installa tutte le dipendenze
 COPY package*.json ./
-RUN npm ci
+RUN npm install
 
-# Copy source
+# 2️⃣ Copia tutto il codice sorgente
 COPY . .
 
-# Build TypeScript
-RUN npm run build
+# 3️⃣ Compila TypeScript
+RUN npx tsc
 
-# Production image
+# ===============================
+# Production Image
+# ===============================
 FROM node:20-alpine
-
 WORKDIR /app
 
-# Copy built files and deps
+# Copia solo i file necessari dal builder
 COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/package*.json ./
 COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package.json ./
 
-# Expose port
+# 4️⃣ Esponi la porta
 EXPOSE 8080
 
-# Health check
+# 5️⃣ Health Check automatico
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD node -e "require('http').get('http://localhost:8080/health', (r) => process.exit(r.statusCode === 200 ? 0 : 1))"
 
-# Start server
+# 6️⃣ Avvia il server compilato
 CMD ["node", "dist/server.js"]
+
