--- a/server/package.json
+++ b/server/package.json
@@ -1,40 +1,31 @@
 {
   "name": "salesgenius-backend",
   "version": "1.0.0",
-  "description": "SalesGenius AI Backend - Real-time sales assistant",
+  "description": "SalesGenius Backend - Real-time sales assistance with AI suggestions",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev": "nodemon --watch src --ext ts --exec ts-node src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "clean": "rm -rf dist"
   },
-  "keywords": [
-    "sales",
-    "ai",
-    "websocket",
-    "deepgram",
-    "openai"
-  ],
-  "author": "SalesGenius Team",
+  "keywords": ["salesgenius", "websocket", "deepgram", "openai", "supabase"],
+  "author": "Mikba883",
   "license": "MIT",
   "dependencies": {
-    "@deepgram/sdk": "^3.5.0",
-    "openai": "^4.47.1",
-    "ws": "^8.17.0",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5"
+    "@deepgram/sdk": "^3.9.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "openai": "^4.72.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/node": "^20.12.7",
-    "@types/ws": "^8.5.10",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "typescript": "^5.4.5",
-    "tsx": "^4.7.3"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.9.0",
+    "@types/ws": "^8.5.13",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
