--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,18 +19,15 @@ jobs:
       with:
         node-version: '20'
         cache: 'npm'
-        cache-dependency-path: server/package-lock.json
+        cache-dependency-path: package-lock.json
     
     - name: Install dependencies
-      working-directory: ./server
       run: npm ci
     
     - name: Type check
-      working-directory: ./server
       run: npm run type-check
     
     - name: Build
-      working-directory: ./server
       run: npm run build
 
   test-frontend:
@@ -77,6 +74,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    # Vercel deployment happens automatically via GitHub integration
     - name: Notify Vercel
       run: echo "Vercel will auto-deploy on push to main"
+
