--- a/package.json
+++ b/package.json
@@ -2,19 +2,35 @@
   "name": "salesgenius-backend",
   "version": "1.0.0",
   "description": "Sistema completo di assistenza vendita in tempo reale con cattura schermo+audio, trascrizione live e suggerimenti AI categorizzati.",
-  "main": "supabaseClient.js",
+  "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server/index.js",
+    "build": "tsc",
+    "start": "node dist/server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Mikba883/salesgenius-backend.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Michele Baroni",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Mikba883/salesgenius-backend/issues"
   },
-  "homepage": "https://github.com/Mikba883/salesgenius-backend#readme"
+  "homepage": "https://github.com/Mikba883/salesgenius-backend#readme",
+  "dependencies": {
+    "express": "^4.19.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "axios": "^1.7.2",
+    "@supabase/supabase-js": "^2.39.7"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.3",
+    "ts-node": "^10.9.2",
+    "nodemon": "^3.1.10",
+    "@types/node": "^20.11.0",
+    "@types/express": "^4.17.21"
+  }
 }
