--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "axios": "^1.7.2",
-    "@supabase/supabase-js": "^2.39.7"
+    "@supabase/supabase-js": "^2.39.7",
+    "ws": "^8.16.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "typescript": "^5.6.3",
     "ts-node": "^10.9.2",
     "nodemon": "^3.1.10",
     "@types/node": "^20.11.0",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/ws": "^8.5.10",
+    "@types/jsonwebtoken": "^9.0.5"
   }
 }
-
